k8s-vuln-lab/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vuln-lab
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app.kubernetes.io/name: vuln-lab
